membuat bosststrap dengan index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
             <div class="card mt-4">
                 <div class="card-header alert alert-warning">
-                    <h4>Penduduk</h4>
+                    <h4 id="penduduk">Penduduk</h4>
                 </div>
                 <div class="card-body">
                     <table class="table table-striped table-boedered">
@@ -146,7 +146,7 @@
 
             <div class="card mt-4">
                 <div class="card-header alert alert-warning">
-                    <h4 id="Kecamatan">Kecamatan</h4>
+                    <h4 id="kecamatan">Kecamatan</h4>
                 </div>
                 <div class="card-body">
                     <ol>
@@ -182,7 +182,7 @@
 
             <div class="card mt-4">
                 <div class="card-header alert alert-warning">
-                    <h4 id="Website">Website</h4>
+                    <h4 id="website">Website</h4>
                 </div>
                 <div class="card-body">
                     <a href="https://bandarlampungkota.go.id/" target="_blank" rel="noopener noreferrer">
@@ -193,7 +193,7 @@
 
             <div class="card mt-4">
                 <div class="card-header alert alert-warning">
-                    <h4 id="Galeri">Galeri</h4>
+                    <h4 id="galeri">Galeri</h4>
                 </div>
                 <div class="card-body">
                     <div class="row">
@@ -212,7 +212,7 @@
 
             <div class="card mt-4">
                 <div class="card-header alert alert-warning">
-                    <h4 id="Peta">Peta</h4>
+                    <h4 id="peta">Peta</h4>
                 </div>
                 <div class="card-body">
                     <div class="mapouter">
@@ -244,7 +244,7 @@
 
             <div class="card mt-4">
                 <div class="card-header alert alert-warning">
-                    <h4 id="Kritik-saran">Kritik dan Saran</h4>
+                    <h4 id="kritik-saran">Kritik dan Saran</h4>
                 </div>
                 <div class="card-body">
                     <div class="mb-3">
